--- a/EJBAlmacen/EJBAlmacen/nbproject/private/private.properties
+++ b/EJBAlmacen/EJBAlmacen/nbproject/private/private.properties
@@ -1,7 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\marti\\AppData\\Roaming\\.openesb_studio\\3.1.2\\config\\GlassFishEE6\\Properties\\gfv3-783910300.properties
+deploy.ant.properties.file=C:\\Users\\User\\AppData\\Roaming\\.openesb_studio\\3.1.2\\config\\GlassFishEE6\\Properties\\gfv3-1832432263.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/glassfish4/glassfish/domains/domain3
-j2ee.server.home=D:/glassfish4/glassfish
-j2ee.server.instance=[D:\\glassfish4\\glassfish;D:\\glassfish4\\glassfish\\domains\\domain3]deployer:gfv3ee6wc:localhost:10016
-j2ee.server.middleware=D:/glassfish4
-netbeans.user=C:\\Users\\marti\\AppData\\Roaming\\.openesb_studio\\3.1.2
+j2ee.server.domain=C:/Users/User/personal_domain_1
+j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Users\\User\\personal_domain_1]deployer:gfv3ee6wc:localhost:30215
+j2ee.server.middleware=C:/Program Files/glassfish-4.1
+javac.debug=true
+javadoc.preview=true
+netbeans.user=C:\\Users\\User\\AppData\\Roaming\\.openesb_studio\\3.1.2
