--- a/EJBEnvios/nbproject/genfiles.properties
+++ b/EJBEnvios/nbproject/genfiles.properties
@@ -6,3 +6,4 @@ build.xml.stylesheet.CRC32=5910fda3@1.56.1
 nbproject/build-impl.xml.data.CRC32=6e813c9a
 nbproject/build-impl.xml.script.CRC32=12a0428d
 nbproject/build-impl.xml.stylesheet.CRC32=6096d939@1.56.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=8195d35f
