--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ pom.xml.releaseBackup
 pom.xml.tag
 /ServiciosVenta/nbproject/private/
 /ServiciosTiendita/nbproject/private/
+/AplicacionTiendita/nbproject/private/
