--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ pom.xml.tag
 /ServiciosVenta/nbproject/private/
 /ServiciosTiendita/nbproject/private/
 /AplicacionTiendita/nbproject/private/
+/AplicacionTiendita/src/jbiServiceUnits/
+/AplicacionTiendita/test/results/
