Página para generar el pago

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ release.properties
 pom.xml.releaseBackup
 pom.xml.tag
 /tstEJBPagos/nbproject/private/
+/WebApplication1/nbproject/private/
+/TienditaWeb/nbproject/private/
