--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ nb-configuration.xml
 release.properties
 pom.xml.releaseBackup
 pom.xml.tag
+/ServiciosVenta/nbproject/private/
+/ServiciosTiendita/nbproject/private/
+/AplicacionTiendita/nbproject/private/
+/AplicacionTiendita/src/jbiServiceUnits/
+/AplicacionTiendita/test/results/
