--- a/EJBAlmacen/EJBAlmacen/nbproject/project.properties
+++ b/EJBAlmacen/EJBAlmacen/nbproject/project.properties
@@ -34,7 +34,8 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-jar.name=EJBConsultas.jar
+jar.name=EJBAlmacen.jar
+jars.in.ejbjar=false
 javac.classpath=
 javac.debug=true
 javac.deprecation=false
