--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,8 @@ nb-configuration.xml
 release.properties
 pom.xml.releaseBackup
 pom.xml.tag
+/TestEnvios/nbproject/private/
+/TienditaWeb/nbproject/private/
 /ServiciosVenta/nbproject/private/
 /ServiciosTiendita/nbproject/private/
 /AplicacionTiendita/nbproject/private/
