Errores de merge corregidos

--- a/AplicacionTiendita/nbproject/private/private.properties
+++ b/AplicacionTiendita/nbproject/private/private.properties
@@ -1,6 +1,7 @@
-enterprise.module.install.dir=C:\\SCE\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\enterprise\\modules
-ide.module.install.dir=C:\\SCE\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\ide\\modules
-java.module.install.dir=C:\\SCE\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\java\\modules
-netbeans.user=C:\\Users\\vicda\\AppData\\Roaming\\.openesb_studio\\3.1.2
-soa.module.install.dir=C:\\SCE\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\soa\\modules
-xml.module.install.dir=C:\\SCE\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\soa\\modules
+enterprise.module.install.dir=C:\\Users\\User\\Documents\\ITAM\\9noSemestre\\SCE\\OSB\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\enterprise\\modules
+ide.module.install.dir=C:\\Users\\User\\Documents\\ITAM\\9noSemestre\\SCE\\OSB\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\ide\\modules
+j2ee.server.instance=openesb-standalone-deployer:home=C:\\Users\\User\\Documents\\ITAM\\9noSemestre\\SCE\\OSB\\OpenESB-SE-3.1.2.3-a\\OE-Instance&
+java.module.install.dir=C:\\Users\\User\\Documents\\ITAM\\9noSemestre\\SCE\\OSB\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\java\\modules
+netbeans.user=C:\\Users\\User\\AppData\\Roaming\\.openesb_studio\\3.1.2
+soa.module.install.dir=C:\\Users\\User\\Documents\\ITAM\\9noSemestre\\SCE\\OSB\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\soa\\modules
+xml.module.install.dir=C:\\Users\\User\\Documents\\ITAM\\9noSemestre\\SCE\\OSB\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\soa\\modules
