--- a/ServiciosTiendita/nbproject/private/private.properties
+++ b/ServiciosTiendita/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-module.install.dir=C:\\SCE\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\soa\\modules
-netbeans.user=C:\\Users\\vicda\\AppData\\Roaming\\.openesb_studio\\3.1.2
+module.install.dir=C:\\Users\\User\\Documents\\ITAM\\9noSemestre\\SCE\\OSB\\OpenESB-SE-3.1.2.3-a\\OE-Studio\\soa\\modules
+netbeans.user=C:\\Users\\User\\AppData\\Roaming\\.openesb_studio\\3.1.2
